fix(style): fix some dark mode problems

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -45,20 +45,19 @@ $navbar-breakpoint: 1200px
         flex-flow: row
         align-items: center
 
-.dark-mode body
+body.dark-mode
     $card-content-background-color: black !important
 
 body::-webkit-scrollbar
-    width: .75rem
+    width: .65rem
 
 body::-webkit-scrollbar-track
     background-color: #fafafa
 
-.dark-mode html::-webkit-scrollbar-track
+body.dark-mode::-webkit-scrollbar-track
     background-color: var(--dark-mode-bg)
 
 body::-webkit-scrollbar-thumb
-    border-radius: 1rem
     background-color: var(--scrollbar-color)
 
 html
@@ -69,11 +68,7 @@ html.dark-mode
     scrollbar-color: var(--scrollbar-color) var(--dark-mode-bg)
 
 .dark-mode
-    .hero
-        background: $dark !important
-    .navbar
-        background: $dark !important
-    .navbar-menu
+    .hero, .navbar-dropdown, .navbar, .navbar-menu
         background: $dark !important
     .navbar-burger
         color: #ffffff !important
